--- a/src/app/components/presentación/game-line/game-line.component.html
+++ b/src/app/components/presentación/game-line/game-line.component.html
@@ -1,3 +1,18 @@
-<p>
-  game-line works!
-</p>
+<aside>
+  <h2>Niveles</h2>
+  <div>
+    <h3>Tema</h3>
+    <button>1</button>
+  </div>
+  <div>
+    <h3>Tema</h3>
+    <button>1</button>
+  </div>
+  <div>
+    <h3>Tema</h3>
+    <button>1</button>
+  </div>
+  <div>
+    <button class="btn-btn-primary">Comenzar</button>
+  </div>
+</aside>
