create story boarding first mobile

--- a/src/app/components/lectura/lectura.component.html
+++ b/src/app/components/lectura/lectura.component.html
@@ -1,3 +1,14 @@
-<p>
-  lectura works!
-</p>
+<div class="book-container">
+  <!-- <h1>NIVEL 1 : ACTITUDES Y TEMPERAMENTOS</h1> -->
+  <div class="book-wrapper">
+    <figure>
+      <img src="assets/images/niño-llorando.svg" alt="child">
+    </figure>
+    <p class="ng-page first-page">
+      Mi nombre es Camila y tengo 6 años, hoy me siento muy confundida porque mi mejor amigo Carlitos me dijo que ayer lloró y su papá le gritó que “era una niña”, dice que su papá le dijo que “sólo las niñas lloran”
+    </p>
+    <p class="ng-page second-page">
+      Estoy confundida porque pensé que todos los niños llorábamos cuando nos sentíamos tristes o molestos… Uy! ¡pero si yo tengo a mi hermanito mayor y él siempre llora! creo que le diré a mamá lo que dice el papá de Carlitos para que mi hermanito no sea una niña.
+    </p>
+  </div>
+</div>
