--- a/src/app/components/presentación/init-game/init-game.component.html
+++ b/src/app/components/presentación/init-game/init-game.component.html
@@ -1,4 +1,4 @@
-<aside>
+<aside class="wrapped-presentation">
   <div>
     <img src="" alt="logo">
   </div>
@@ -10,12 +10,16 @@
         <div>
           <img src="" alt="imagen">
         </div>
-        <div class="mb-2">
-          <button class="btn btn-primary btn-block">Jugar</button>
+        <div class="button-container">
+            <button class="btn btn-primary btn-block custom-btn">Jugar</button>
+            <button class="btn btn-primary btn-block custom-btn">Salir</button>
+        </div>
+<!--         <div class="mb-2">
+          <button class="btn btn-primary btn-block custom-btn">Jugar</button>
         </div>
         <div class="my-5">
-          <button class="btn btn-primary btn-block">Salir</button>
-        </div>
+          <button class="btn btn-primary btn-block custom-btn">Salir</button>
+        </div> -->
       </div>
     </div>
   </div>
