--- a/src/app/components/presentación/game-line/game-line.component.html
+++ b/src/app/components/presentación/game-line/game-line.component.html
@@ -1,18 +1,18 @@
-<aside>
-  <h2>Niveles</h2>
-  <div>
-    <h3>Tema</h3>
-    <button>1</button>
+<aside class="container">
+
+  <h2 class="text-black-gray my-5">Niveles</h2>
+  <div class="">
+    <button class="btn btn-1 btn-primary">1</button>
   </div>
-  <div>
-    <h3>Tema</h3>
-    <button>1</button>
+  <div class="">
+    <button class="btn btn-2 btn-primary">2</button>
   </div>
-  <div>
-    <h3>Tema</h3>
-    <button>1</button>
+  <div class="">
+    <button class="btn btn-3 btn-primary">3</button>
   </div>
-  <div>
-    <button class="btn-btn-primary">Comenzar</button>
+
+  <div class="">
+    <button class="btn btn-block btn-primary btn-comenzar">Comenzar</button>
   </div>
+
 </aside>
