--- a/src/app/components/presentación/init-game/init-game.component.scss
+++ b/src/app/components/presentación/init-game/init-game.component.scss
@@ -1,12 +1,37 @@
 .wrapped-presentation {
   background: linear-gradient(348.16deg, #FB3594 0%, #3656C3 100%);
   height: 100vh;
+
+  .card-body {
+    padding: 30px 30px 50px;
+  }
+
+  .set-logo {
+    padding: 30px;
+    text-align: center;
+    img {
+      height: 80px;
+    }
+  }
+
+  .set-mounstruo {
+    img {
+      height: 200px;
+    }
+  }
 }
 
 .custom-btn {
-  background: linear-gradient(348.16deg, #FB3594 0%, #3656C3 100%);
+  background: #21C074;
   border: none;
   border-radius: 30.5px;
   font-size: 18px;
   height: 60px;
+}
+
+.set-loading {
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
 }
