--- a/src/app/components/presentación/game-line/game-line.component.html
+++ b/src/app/components/presentación/game-line/game-line.component.html
@@ -2,17 +2,17 @@
 
   <h2 class="text-black-gray my-5">Niveles</h2>
   <div class="">
-    <button class="btn btn-1 btn-primary">1</button>
+    <button class="btn btn-1 btn-primary" (click)="navegar('1')">1</button>
   </div>
   <div class="">
-    <button class="btn btn-2 btn-primary">2</button>
+    <button class="btn btn-2 btn-primary" (click)="navegar('2')">2</button>
   </div>
   <div class="">
-    <button class="btn btn-3 btn-primary">3</button>
+    <button class="btn btn-3 btn-primary" (click)="navegar('3')">3</button>
   </div>
 
   <div class="">
-    <button class="btn btn-block btn-primary btn-comenzar">Comenzar</button>
+    <button class="btn btn-block btn-primary btn-comenzar" (click)="navegar('1')">Comenzar</button>
   </div>
 
 </aside>
