pase de paginas

--- a/src/app/components/presentación/init-game/init-game.component.html
+++ b/src/app/components/presentación/init-game/init-game.component.html
@@ -10,7 +10,7 @@
           <img src="assets/images/mounstruo-enojado.svg" alt="imagen">
         </figure>
         <div class="button-container">
-            <button class="btn btn-primary btn-block custom-btn">Jugar</button>
+            <button class="btn btn-primary btn-block custom-btn" (click)="navegar()">Jugar</button>
             <button class="btn btn-primary btn-block custom-btn">Salir</button>
         </div>
       </div>
