--- a/src/app/components/juegos/face/face.component.html
+++ b/src/app/components/juegos/face/face.component.html
@@ -1,3 +1,46 @@
-<p>
-  face works!
-</p>
+<!-- <div class="container">
+  <div class="col-xs-12 game-one col-md-6 mt-5 mb-5">
+    <div class="row d-flex justify-content-center align-items-center">
+      <div class="col">
+        <div class="row">
+          <h6>{{state.title}}</h6>
+          <div class="img-responsiv m-3 col-xs-11 col-md-6">
+            <img [src]="question.img" class="leve-1-img" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+        <img (click)="select('good')" class="icon mr-2 pulse animated"
+          src="https://image.flaticon.com/icons/png/128/1753/1753144.png" alt="">
+        <img (click)="select('bad')" class="icon ml-2 pulse animated"
+          src="https://image.flaticon.com/icons/png/128/1484/1484797.png" alt="">
+    </div>
+    <div class="row">
+        <span>progreso: {{progress}}</span>
+    </div>
+  </div>
+
+</div> -->
+
+<div class="container">
+  <div class="my-5">
+    <h6>{{state.title}}</h6>
+  </div>
+
+  <div class="mb-5">
+    <img [src]="question.img" class="leve-1-img" alt="">
+  </div>
+
+  <div class="row d-flex justify-content-center my-5">
+    <img (click)="select('good')" class="icon mr-2 pulse animated"
+      src="https://image.flaticon.com/icons/png/128/1753/1753144.png" alt="">
+    <img (click)="select('bad')" class="icon ml-2 pulse animated"
+      src="https://image.flaticon.com/icons/png/128/1484/1484797.png" alt="">
+  </div>{{progress}} -- {{curretIndexQuestion}}
+  <div class="progress">
+      <div class="progress-bar" role="progressbar"
+       [ngClass]="{'w-30' : progress === 1 , 'w-60' :progress === 2 , 'w-90' : progress === 3 }" aria-valuenow="25" aria-valuemin="0"
+        aria-valuemax="90"></div>
+    </div>
+</div>
