--- a/src/app/components/juegos/face/face.component.html
+++ b/src/app/components/juegos/face/face.component.html
@@ -12,12 +12,12 @@
     <div class="col-xs-5 mr-5"> 
         <img (click)="select('good')" class="icon  pulse animated"
         src="assets/img/happy.jpeg" alt="">
-        <strong class="d-block text-center">Sí</strong>
+        <strong class="mt-3 d-block text-center">Sí</strong>
     </div>
     <div class="col-xs-5 ml-5">
         <img (click)="select('bad')" class="icon pulse animated"
         src="assets/img/bad.jpeg" alt=""> 
-        <strong class="d-block text-center">No</strong>
+        <strong class="mt-3 d-block text-center">No</strong>
     </div>
     
       
