--- a/src/app/components/lectura/lectura.component.html
+++ b/src/app/components/lectura/lectura.component.html
@@ -4,7 +4,8 @@
     <figure>
       <img src="assets/images/niño-llorando.svg" alt="child">
     </figure>
-    <button class="btn btn-next" (click)="goGame()">Continuar</button>
+    <button  (click)="goGame()" class="btn btn-next">Continuar</button>
+    <button (click)="atras()" class="btn">Atras</button>
     <p class="ng-page first-page">
       Mi nombre es Camila y tengo 6 años, hoy me siento muy confundida porque mi mejor amigo Carlitos me dijo que ayer lloró y su papá le gritó que “era una niña”, dice que su papá le dijo que “sólo las niñas lloran”
     </p>
