--- a/src/app/components/reflexion/reflexion.component.scss
+++ b/src/app/components/reflexion/reflexion.component.scss
@@ -54,3 +54,13 @@
     position: absolute;
   }
 }
+
+.btn-comenzar {
+  background: linear-gradient(348.16deg, #FB3594 0%, #3656C3 100%);
+  bottom: 0px;
+  border: none;
+  border-radius: 30.5px;
+  font-size: 18px;
+  height: 60px;
+  margin-bottom: 0;
+}
