--- a/src/app/components/reflexion/reflexion.component.html
+++ b/src/app/components/reflexion/reflexion.component.html
@@ -51,5 +51,6 @@
 					</section>
 				</div>
 			</div>
-		</div>
+    </div>
+    <button class="btn btn-block btn-primary btn-comenzar"[routerLink]="['/linea-de-juego']">Inicio</button>
 	</section>
