--- a/src/app/components/reflexion/reflexion.component.html
+++ b/src/app/components/reflexion/reflexion.component.html
@@ -51,6 +51,7 @@
 					</section>
 				</div>
 			</div>
-    </div>
-    <button class="btn btn-block btn-primary btn-comenzar"[routerLink]="['/linea-de-juego']">Inicio</button>
+	</div>
+	
+    <button class="btn btn-block btn-primary btn-comenzar"[routerLink]="['/linea-de-juego']">Continuar</button>
 	</section>
