--- a/src/app/components/medalla1/medalla1.component.html
+++ b/src/app/components/medalla1/medalla1.component.html
@@ -1,4 +1,11 @@
-<p>
-  medalla1 works!
-</p>
-<img src="assets/img/medalla-1.jpeg" alt="">
+<div class="container">
+  <div class="row">
+    <div class="col content d-flex justify-content-center align-items-center">
+        <img src="assets/img/medalla-1.jpeg" alt="">
+
+    </div>
+    <div class="">
+        <button class="btn btn-block btn-primary btn-comenzar"[routerLink]="['/linea-de-juego']">Continuar</button>
+    </div>
+  </div>
+</div>
