--- a/src/app/components/reflexion/reflexion.component.html
+++ b/src/app/components/reflexion/reflexion.component.html
@@ -1,57 +1,66 @@
 <button (click)="atras()" class="btn">Atras</button>
 <section class="reflextion-container">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<header>
-						<div class="row">
-							<div class="col-12 d-flex justify-content-center pb-3">
-								<div class="title">
-									Pregúntale a tu hij@
-								</div>
-							</div>
-							<div class="col-12 d-flex justify-content-center">
-								<div class="question">
-									¿ Crees que los niños son más fuertes que las niñas ? Por ejemplo (no lloran, son
-									más
-									decididos, pueden hacer las cosas solos ?
-								</div>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<header>
+					<div class="row">
+						<div class="col-12 d-flex justify-content-center pb-3">
+							<div class="title">
+								Pregúntale a tu hij@
 							</div>
 						</div>
-						<div>
-						</div>
-					</header>
-					<section>
-						<div class="row ">
-							<div class="col-12 d-flex justify-content-center mt-3">
-								<span class="text-title">EQUAL TIPS</span>
+						<div class="col-12 d-flex justify-content-center">
+							<div class="question">
+								¿ Crees que los niños son más fuertes que las niñas ? Por ejemplo (no lloran, son
+								más
+								decididos, pueden hacer las cosas solos ?
 							</div>
-							<div class="col-sm-12 d-md-flex justify-content-md-center">
-								<div class="text-box">
-									<div class="content-textos d-flex justify-content-center">
-										<span class="text-content">
-											- Explícale que niños y niñas son seres humanos iguales, que pueden tener las mismas experiencias
-											(cuando les va mal o bien), y sentir lo mismo (tristeza, enojo, alegría). <br><br>
-											- Explícale que niños y niñas son seres humanos iguales, que pueden tener las mismas experiencias
-											(cuando les va mal o bien), y sentir lo mismo (tristeza, enojo, alegría).<br><br>
-											- Si identificas estos estereotipos en más miembros de tu familia, habla con cada un@ de ellos y coméntales lo que quieres lograr con tu pequeñ@ para que te ayuden a lograrlo.<br><br>
+						</div>
+					</div>
+					<div>
+					</div>
+				</header>
+				<section>
+					<div class="row ">
+						<div class="col-12 d-flex justify-content-center mt-3">
+							<span class="text-title">EQUAL TIPS</span>
+						</div>
+						<div class="col-sm-12 d-md-flex justify-content-md-center">
+							<div class="text-box">
+								<div class="content-textos d-flex justify-content-center">
+									<span class="text-content">
+										- Explícale que niños y niñas son seres humanos iguales, que pueden tener las
+										mismas experiencias
+										(cuando les va mal o bien), y sentir lo mismo (tristeza, enojo, alegría).
+										<br><br>
+										- Explícale que niños y niñas son seres humanos iguales, que pueden tener las
+										mismas experiencias
+										(cuando les va mal o bien), y sentir lo mismo (tristeza, enojo,
+										alegría).<br><br>
+										- Si identificas estos estereotipos en más miembros de tu familia, habla con
+										cada un@ de ellos y coméntales lo que quieres lograr con tu pequeñ@ para que te
+										ayuden a lograrlo.<br><br>
 
-										</span>
-									</div>
+									</span>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col d-md-flex justify-content-md-center reflextion-avatar">
-								<span>
-									<img src="assets/images/people.png" alt="">
-								</span>
-							</div>
+					</div>
+					<div class="row">
+						<div class="col d-md-flex justify-content-md-center reflextion-avatar">
+							<span>
+								<img src="assets/images/people.png" alt="">
+							</span>
 						</div>
-					</section>
-				</div>
+					</div>
+				</section>
 			</div>
+		</div>
 	</div>
-	
-    <button class="btn btn-block btn-primary btn-comenzar"[routerLink]="['/linea-de-juego']">Continuar</button>
-	</section>
+	<div class="col">
+		<button class="btn btn-block btn-primary btn-comenzar w-100" [routerLink]="['/medalla-1']">Siguiente
+			nivel</button>
+
+	</div>
+</section>
